# findconfdir

./: CMakeLists.txt  findconfdir.cpp  findconfdir.hpp
headers/: findconfdir.hpp
